# algoretum

./: .travis.yml  CMakeLists.txt  G_GermanCities.txt  README.md
include/Graphs/: BreadthFirstPaths.h  DepthFirstCC.h  DepthFirstPaths.h  Graph.h
util/: BreadthFirstPaths.cpp  DepthFirstCC.cpp  DepthFirstPaths.cpp
